Added script js

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista zadań</title>
+    <script src="js/script.js" defer></script>
+
 </head>
+
 <body class="body">
     <div class="container">
         <header class="header">
@@ -29,4 +33,5 @@
 
 
 </body>
+
 </html>
