added container styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/body.css" rel="stylesheet">
+    <link href="css/container.css" rel="stylesheet">
     <script src="js/script.js" defer></script>
 
 </head>
