--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/body.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
     <link href="css/list.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
     <script src="js/script.js" defer></script>
 
 </head>
