--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="css/list.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
     <script src="js/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
