--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="css/container.css" rel="stylesheet">
     <link href="css/list.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
+    <link href="css/form.css" rel="stylesheet">
     <script src="js/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -28,9 +29,9 @@
 
         <section class="section">
             <h2 class="section__header">Dodaj nowe zadanie</h2>
-            <form class="section__form js-form">
-                <input class="section__formImput js-newTask" placeholder="Co jest do zrobienia?">
-                <button class="section__formButton">Dodaj zadanie</button>
+            <form class="form js-form">
+                <input class="form__imput js-newTask" placeholder="Co jest do zrobienia?">
+                <button class="form__button">Dodaj zadanie</button>
             </form>
         </section>
 
