--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="body">
-    <div class="container">
+    <main class="container">
         <header class="header">
             <h1>Lista zadań</h1>
         </header>
@@ -36,11 +36,14 @@
         </section>
 
         <section class="section">
-            <h2 class="section__header">Lista zadań</h2>
+            <div class="section__container">
+                <h2 class="section__header">Lista zadań</h2>
+                <div class="section__buttons js-buttons"></div>
+            </div>
             <ul class="section__list js-tasks">
             </ul>
         </section>
-    </div>
+    </main>
 
 
 </body>
